--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -5,7 +5,7 @@ html, body {
     padding: 0;
     background-color: white;
     font-family: 'Lato', sans-serif;
-    font-size: 16px;
+    font-size: 18px;
 }
 
 * { box-sizing: border-box; }
